--- a/package.json
+++ b/package.json
@@ -45,9 +45,9 @@
     ]
   },
   "devDependencies": {
-    "postcss-preset-env": "^10.2.4"
-  },
-  "engines": {
-    "node": "18"
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "postcss-preset-env": "^10.2.4",
+    "tailwindcss": "^4.1.12"
   }
 }
