--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "animejs": "^4.1.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.8.1",
+    "react-router-dom": "^7.8.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -49,5 +49,12 @@
     "postcss": "^8.5.6",
     "postcss-preset-env": "^10.2.4",
     "tailwindcss": "^4.1.12"
+  },
+  "jest": {
+    "testEnvironment": "jsdom",
+    "setupFilesAfterEnv": ["<rootDir>/src/setupTests.js"],
+    "testEnvironmentOptions": {
+      "url": "http://localhost"
+    }
   }
 }
